@@ -1,5 +1,7 @@
 Therion 6.0.2 (in progress):
 
+xtherion:
+ * improved control over vertical positioning of backgroud images
 
 --------------------------------------------------------------------------------
 
